--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,7 +37,7 @@ jobs:
         - name: Terraform Init
           id: init
           run: terraform init -backend-config "bucket=$BUCKET_TF_STATE"
-          env: # <--- THIS 'env' BLOCK IS CRUCIAL
+          env:
             BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
 
         - name: Terraform Format
